# oliveplay

./: .env.dev.tmpl  .env.production  .gitignore  Cargo.toml  README.md  TODO.md  docker-compose.yml  ngrok.yml  nx.json  package-lock.json  package.json  project.json
.github/workflows/: ci.yml  test_and_lint.yml
app/: .metadata  README.md  firebase.json  project.json  pubspec.yaml
app/android/app/: build.gradle  google-services.json
app/ios/Runner/: GoogleService-Info.plist  Runner.entitlements
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: constants.dart  firebase_options.dart  main.dart
app/lib/state/: auth_model.dart
app/lib/types/: user.dart
app/lib/views/: auth_view.dart
app/web/: index.html  manifest.json
env/: .env  .env.dev.tmpl  .env.prod
env/api/: .env.dev
env/app/: .env.dev.tmpl
libraries/cate_utils/: go.mod  go.sum  project.json  sqlc.yaml
libraries/test_helper/: project.json  test_helper.go  test_helper_test.go
libraries/utils/: go.mod  go.sum  project.json  sqlc.yaml
script/: update_env.sh
services/api/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  project.json
services/app/: Dockerfile  README.md  project.json  pubspec.yaml
services/bootstrapper/: README.md  project.json
services/controller/: Cargo.toml  Dockerfile  README.md  project.json
services/controller/src/: constants.rs  main.rs
services/migrator/: Dockerfile  go.mod  main.go  project.json
services/worker/: Dockerfile  go.mod  go.sum  project.json
terraform/: dev.tfvars  main.tf  prod.tfvars  route53.tf  variables.tf  versions.tf
(+85 files in other folders)
