[package]
name = "controller"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rppal = "0.17.1"  # Raspberry Pi GPIO library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
